--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@ const temas = [
     }
   }
 ];
+
 function renderMenu(){
   const m = document.getElementById('menu');
   if(!m) return;
@@ -319,7 +320,7 @@ function volverMenu(){
   document.getElementById('contenido').innerHTML='';
   window.scrollTo({top:0,behavior:'smooth'});
 }
-ffunction miniQuiz(){
+function miniQuiz(){
   const rA = pickRange([1,6],[1,9],[3,15]);
   const rB = pickRange([3,9],[3,12],[8,20]);
   const a1 = -rint(...rA), b1 = rint(...rB);
@@ -394,3 +395,31 @@ ffunction miniQuiz(){
   document.getElementById('btn_rep').addEventListener('click', miniQuiz);
   document.getElementById('btn_volver2').addEventListener('click', volverMenu);
 }
+
+function bindTopBar(){
+  const bF = document.getElementById('dif_facil');
+  const bM = document.getElementById('dif_medio');
+  const bD = document.getElementById('dif_dificil');
+  if(bF && bM && bD){
+    bF.addEventListener('click', ()=>setDificultad('facil'));
+    bM.addEventListener('click', ()=>setDificultad('medio'));
+    bD.addEventListener('click', ()=>setDificultad('dificil'));
+  }
+  const btnQuiz = document.getElementById('btn_quiz');
+  if(btnQuiz) btnQuiz.addEventListener('click', miniQuiz);
+}
+
+function init(){
+  bindTopBar();
+  renderMenu();
+}
+document.addEventListener('DOMContentLoaded', ()=> {
+  try{ init(); } catch(e){ console.error('Init error:', e); }
+});
+setTimeout(()=>{ try{
+  const m = document.getElementById('menu');
+  if(m && m.children.length===0) init();
+} catch(e){} }, 700);
+</script>
+</body>
+</html>
