--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ const temas = [
       ];
     }
   },
-  { id:"geometria", titulo:"Geometría (planas)",
+  { id:"geometria", titulo:"Geometría)",
     exp:"Perímetro: suma de lados. Áreas: Rectángulo A= b×h; Triángulo A=(b×h)/2; Círculo A=πr², P=2πr.",
     ejemplo:"Rectángulo 8×5 → A=40 cm²; P=26 cm.",
     preguntas: () => {
