--- a/index.html
+++ b/index.html
@@ -409,4 +409,4 @@ setTimeout(()=>{ try{
 </script>
 </body>
 </html>
-<img src="https://visitor-badge.laobi.icu/badge?page_id=victorsoria800-cmd.matesanda" alt="Contador de visitas" />
+<img src="https://N° Visitas de estudiantes-badge.laobi.icu/badge?page_id=victorsoria800-cmd.matesanda" alt="Contador de visitas" />
