--- a/index.html
+++ b/index.html
@@ -409,4 +409,7 @@ setTimeout(()=>{ try{
 </script>
 </body>
 </html>
-<img src="https://N° Visitas de estudiantes-badge.laobi.icu/badge?page_id=victorsoria800-cmd.matesanda" alt="Contador de visitas" />
+<div class="footer">
+  Consejos: responde solo con números cuando se pida. Si te equivocas, verás la corrección al instante.<br>
+  <span id="contador"></span>
+</div>
