--- a/index.html
+++ b/index.html
@@ -29,15 +29,6 @@
   #btn-ayuda, [id*="ayuda" i], .ayuda { display: none !important; }
 </style>
 </head>
-  <script>
-  // Contador de visitas con CountAPI
-  fetch('https://api.countapi.xyz/hit/victorsoria800-cmd.github.io/matesanda')
-    .then(res => res.json())
-    .then(data => {
-      document.getElementById('contador').textContent =
-        `Visitas al sitio: ${data.value}`;
-    });
-</script>
 <body>
 <header>
   <h1>Entrenamiento de Matemática para ingresantes (Escuela N° 3117 “La Reyes”) — Flujo creado con IA según la cartilla institucional</h1>
@@ -418,5 +409,5 @@ setTimeout(()=>{ try{
 </script>
 </body>
 </html>
-
+<img src="https://visitor-badge.laobi.icu/badge?page_id=victorsoria800-cmd.matesanda" alt="Contador de visitas" />
   
